// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VersionContextDropdown renders the expanded version context dropdown, with 3.15 selected and displayed first 1`] = `
<VersionContextDropdown
  alwaysExpanded={true}
  availableVersionContexts={
    Array [
      Object {
        "description": "3.15",
        "name": "3.15",
        "revisions": Array [
          Object {
            "repo": "github.com/sourcegraph/sourcegraph",
            "rev": "3.15",
          },
        ],
      },
      Object {
        "description": "3.0",
        "name": "3.0",
        "revisions": Array [
          Object {
            "repo": "github.com/sourcegraph/sourcegraph",
            "rev": "3.0",
          },
        ],
      },
    ]
  }
  caseSensitive={false}
  history="[History]"
  navbarSearchQuery="test"
  patternType="literal"
  portal={false}
  setVersionContext={[Function]}
  versionContext="3.15"
>
  <div
    className="version-context-dropdown text-nowrap"
  >
    <ListboxInput
      onChange={[Function]}
      value="3.15"
    >
      <DescendantProvider
        context={
          Object {
            "$$typeof": Symbol(react.context),
            "Consumer": Object {
              "$$typeof": Symbol(react.context),
              "_calculateChangedBits": null,
              "_context": "[Cyclic structure]",
            },
            "Provider": Object {
              "$$typeof": Symbol(react.provider),
              "_context": "[Cyclic structure]",
            },
            "_calculateChangedBits": null,
            "_currentRenderer": Object {},
            "_currentRenderer2": null,
            "_currentValue": Object {
              "descendants": Array [],
              "registerDescendant": [Function],
              "unregisterDescendant": [Function],
            },
            "_currentValue2": Object {
              "descendants": Array [],
              "registerDescendant": [Function],
              "unregisterDescendant": [Function],
            },
            "_threadCount": 0,
            "displayName": "ListboxDescendantContext",
          }
        }
        items={
          Array [
            Object {
              "disabled": false,
              "element": <li
                aria-selected="true"
                class="version-context-dropdown__option"
                data-current=""
                data-label="3.15"
                data-reach-listbox-option=""
                data-value="3.15"
                id="option-3.15--listbox-input--6"
                role="option"
              >
                <div>
                  <button
                    aria-label="Disable version context"
                    class="btn btn-icon"
                    type="button"
                  >
                    <svg
                      class="mdi-icon icon-inline small"
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <path
                        d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
                      />
                    </svg>
                  </button>
                </div>
                <span
                  class="version-context-dropdown__option-name"
                >
                  3.15
                </span>
                <span
                  class="version-context-dropdown__option-description"
                >
                  3.15
                </span>
              </li>,
              "index": 0,
              "label": "3.15",
              "value": "3.15",
            },
            Object {
              "disabled": false,
              "element": <li
                class="version-context-dropdown__option"
                data-label="3.0"
                data-reach-listbox-option=""
                data-value="3.0"
                id="option-3.0--listbox-input--6"
                role="option"
              >
                <div />
                <span
                  class="version-context-dropdown__option-name"
                >
                  3.0
                </span>
                <span
                  class="version-context-dropdown__option-description"
                >
                  3.0
                </span>
              </li>,
              "index": 1,
              "label": "3.0",
              "value": "3.0",
            },
          ]
        }
        set={[Function]}
      >
        <div
          data-reach-listbox-input=""
          data-state="closed"
          data-value="3.15"
          id="listbox-input--6"
        >
          <ListboxButton
            className="version-context-dropdown__button btn btn-secondary"
          >
            <span
              aria-haspopup="listbox"
              aria-labelledby="button--listbox-input--6"
              className="version-context-dropdown__button btn btn-secondary"
              data-reach-listbox-button=""
              id="button--listbox-input--6"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              role="button"
              tabIndex={0}
            >
              <Memo(FlagVariantIcon)
                className="icon-inline small"
              />
              <span
                className="version-context-dropdown__button-text ml-2 mr-1"
              >
                3.15
                 (Active)
              </span>
              <Memo(MenuDownIcon)
                className="icon-inline"
              />
            </span>
          </ListboxButton>
          <ListboxPopover
            className="version-context-dropdown__popover dropdown-menu show"
            portal={false}
          >
            <div
              className="version-context-dropdown__popover dropdown-menu show"
              data-reach-listbox-popover=""
              hidden={true}
              onBlur={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
            >
              <div
                className="version-context-dropdown__info card"
              >
                <span
                  className="font-weight-bold"
                >
                  About version contexts
                </span>
                <p
                  className="mb-2"
                >
                  Version contexts (
                  <a
                    href="http://docs.sourcegraph.com/user/search#version-contexts"
                  >
                    documentation
                  </a>
                  ) allow you to search a set of repositories based on a commit hash, tag, or other interesting moment in time of multiple code bases. Your administrator can configure version contexts in the site configuration.
                </p>
                <button
                  className="btn btn-outline-primary version-context-dropdown__info-dismiss"
                  onClick={[Function]}
                  type="button"
                >
                  Do not show this again
                </button>
              </div>
              <ListboxList
                className="version-context-dropdown__list"
              >
                <ul
                  aria-activedescendant="option-3.15--listbox-input--6"
                  className="version-context-dropdown__list"
                  data-reach-listbox-list=""
                  id="listbox--listbox-input--6"
                  role="listbox"
                  tabIndex={-1}
                >
                  <ListboxGroupLabel
                    className="version-context-dropdown__option version-context-dropdown__title"
                    disabled={true}
                    value="title"
                  >
                    <span
                      className="version-context-dropdown__option version-context-dropdown__title"
                      data-reach-listbox-group-label=""
                      disabled={true}
                      role="presentation"
                      value="title"
                    >
                      <VersionContextInfoRow
                        description="Description"
                        isActive={false}
                        name="Name"
                        onDisableValue={[Function]}
                      >
                        <div />
                        <span
                          className="version-context-dropdown__option-name"
                        >
                          Name
                        </span>
                        <span
                          className="version-context-dropdown__option-description"
                        >
                          Description
                        </span>
                      </VersionContextInfoRow>
                    </span>
                  </ListboxGroupLabel>
                  <ListboxOption
                    className="version-context-dropdown__option"
                    key="3.15"
                    label="3.15"
                    value="3.15"
                  >
                    <li
                      aria-selected={true}
                      className="version-context-dropdown__option"
                      data-current=""
                      data-label="3.15"
                      data-reach-listbox-option=""
                      data-value="3.15"
                      id="option-3.15--listbox-input--6"
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                    >
                      <VersionContextInfoRow
                        description="3.15"
                        isActive={true}
                        name="3.15"
                        onDisableValue={[Function]}
                      >
                        <div>
                          <button
                            aria-label="Disable version context"
                            className="btn btn-icon"
                            onClick={[Function]}
                            type="button"
                          >
                            <Memo(CloseIcon)
                              className="icon-inline small"
                            />
                          </button>
                        </div>
                        <span
                          className="version-context-dropdown__option-name"
                        >
                          3.15
                        </span>
                        <span
                          className="version-context-dropdown__option-description"
                        >
                          3.15
                        </span>
                      </VersionContextInfoRow>
                    </li>
                  </ListboxOption>
                  <ListboxOption
                    className="version-context-dropdown__option"
                    key="3.0"
                    label="3.0"
                    value="3.0"
                  >
                    <li
                      className="version-context-dropdown__option"
                      data-label="3.0"
                      data-reach-listbox-option=""
                      data-value="3.0"
                      id="option-3.0--listbox-input--6"
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                    >
                      <VersionContextInfoRow
                        description="3.0"
                        isActive={false}
                        name="3.0"
                        onDisableValue={[Function]}
                      >
                        <div />
                        <span
                          className="version-context-dropdown__option-name"
                        >
                          3.0
                        </span>
                        <span
                          className="version-context-dropdown__option-description"
                        >
                          3.0
                        </span>
                      </VersionContextInfoRow>
                    </li>
                  </ListboxOption>
                </ul>
              </ListboxList>
            </div>
          </ListboxPopover>
        </div>
      </DescendantProvider>
    </ListboxInput>
  </div>
</VersionContextDropdown>
`;

exports[`VersionContextDropdown renders the version context dropdown with no context selected 1`] = `
<VersionContextDropdown
  availableVersionContexts={
    Array [
      Object {
        "description": "3.0",
        "name": "3.0",
        "revisions": Array [
          Object {
            "repo": "github.com/sourcegraph/sourcegraph",
            "rev": "3.0",
          },
        ],
      },
      Object {
        "description": "3.15",
        "name": "3.15",
        "revisions": Array [
          Object {
            "repo": "github.com/sourcegraph/sourcegraph",
            "rev": "3.15",
          },
        ],
      },
    ]
  }
  caseSensitive={false}
  history="[History]"
  navbarSearchQuery="test"
  patternType="literal"
  setVersionContext={[Function]}
>
  <div
    className="version-context-dropdown text-nowrap"
  >
    <ListboxInput
      onChange={[Function]}
    >
      <DescendantProvider
        context={
          Object {
            "$$typeof": Symbol(react.context),
            "Consumer": Object {
              "$$typeof": Symbol(react.context),
              "_calculateChangedBits": null,
              "_context": "[Cyclic structure]",
            },
            "Provider": Object {
              "$$typeof": Symbol(react.provider),
              "_context": "[Cyclic structure]",
            },
            "_calculateChangedBits": null,
            "_currentRenderer": Object {},
            "_currentRenderer2": null,
            "_currentValue": Object {
              "descendants": Array [],
              "registerDescendant": [Function],
              "unregisterDescendant": [Function],
            },
            "_currentValue2": Object {
              "descendants": Array [],
              "registerDescendant": [Function],
              "unregisterDescendant": [Function],
            },
            "_threadCount": 0,
            "displayName": "ListboxDescendantContext",
          }
        }
        items={
          Array [
            Object {
              "disabled": false,
              "element": <li
                aria-selected="true"
                class="version-context-dropdown__option"
                data-current=""
                data-label="3.0"
                data-reach-listbox-option=""
                data-value="3.0"
                id="option-3.0--listbox-input--1"
                role="option"
              >
                <div />
                <span
                  class="version-context-dropdown__option-name"
                >
                  3.0
                </span>
                <span
                  class="version-context-dropdown__option-description"
                >
                  3.0
                </span>
              </li>,
              "index": 0,
              "label": "3.0",
              "value": "3.0",
            },
            Object {
              "disabled": false,
              "element": <li
                class="version-context-dropdown__option"
                data-label="3.15"
                data-reach-listbox-option=""
                data-value="3.15"
                id="option-3.15--listbox-input--1"
                role="option"
              >
                <div />
                <span
                  class="version-context-dropdown__option-name"
                >
                  3.15
                </span>
                <span
                  class="version-context-dropdown__option-description"
                >
                  3.15
                </span>
              </li>,
              "index": 1,
              "label": "3.15",
              "value": "3.15",
            },
          ]
        }
        set={[Function]}
      >
        <div
          data-reach-listbox-input=""
          data-state="closed"
          data-value="3.0"
          id="listbox-input--1"
        >
          <ListboxButton
            className="version-context-dropdown__button btn btn-secondary"
          >
            <span
              aria-haspopup="listbox"
              aria-labelledby="button--listbox-input--1"
              className="version-context-dropdown__button btn btn-secondary"
              data-reach-listbox-button=""
              id="button--listbox-input--1"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              role="button"
              tabIndex={0}
            >
              <Memo(FlagVariantIcon)
                className="icon-inline small"
              />
              <span
                className="version-context-dropdown__button-text ml-2 mr-1 d-sm-none d-md-block"
              >
                Select context
              </span>
              <Memo(MenuDownIcon)
                className="icon-inline"
              />
            </span>
          </ListboxButton>
          <ListboxPopover
            className="version-context-dropdown__popover dropdown-menu"
          >
            <Popover
              className="version-context-dropdown__popover dropdown-menu"
              data-reach-listbox-popover=""
              hidden={true}
              onBlur={[Function]}
              onKeyDown={[Function]}
              position={[Function]}
              tabIndex={-1}
              targetRef={
                Object {
                  "current": <span
                    aria-haspopup="listbox"
                    aria-labelledby="button--listbox-input--1"
                    class="version-context-dropdown__button btn btn-secondary"
                    data-reach-listbox-button=""
                    id="button--listbox-input--1"
                    role="button"
                    tabindex="0"
                  >
                    <svg
                      class="mdi-icon icon-inline small"
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <path
                        d="M6,3A1,1 0 0,1 7,4V4.88C8.06,4.44 9.5,4 11,4C14,4 14,6 16,6C19,6 20,4 20,4V12C20,12 19,14 16,14C13,14 13,12 11,12C8,12 7,14 7,14V21H5V4A1,1 0 0,1 6,3Z"
                      />
                    </svg>
                    <span
                      class="version-context-dropdown__button-text ml-2 mr-1 d-sm-none d-md-block"
                    >
                      Select context
                    </span>
                    <svg
                      class="mdi-icon icon-inline"
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <path
                        d="M7,10L12,15L17,10H7Z"
                      />
                    </svg>
                  </span>,
                }
              }
            >
              <Portal>
                <Portal
                  containerInfo={
                    <reach-portal>
                      <div
                        class="version-context-dropdown__popover dropdown-menu"
                        data-reach-listbox-popover=""
                        data-reach-popover=""
                        hidden=""
                        style="position: absolute; width: 0px; left: 0px; top: 0px;"
                        tabindex="-1"
                      >
                        <div
                          class="version-context-dropdown__info card"
                        >
                          <span
                            class="font-weight-bold"
                          >
                            About version contexts
                          </span>
                          <p
                            class="mb-2"
                          >
                            Version contexts (
                            <a
                              href="http://docs.sourcegraph.com/user/search#version-contexts"
                            >
                              documentation
                            </a>
                            ) allow you to search a set of repositories based on a commit hash, tag, or other interesting moment in time of multiple code bases. Your administrator can configure version contexts in the site configuration.
                          </p>
                          <button
                            class="btn btn-outline-primary version-context-dropdown__info-dismiss"
                            type="button"
                          >
                            Do not show this again
                          </button>
                        </div>
                        <ul
                          aria-activedescendant="option-3.0--listbox-input--1"
                          class="version-context-dropdown__list"
                          data-reach-listbox-list=""
                          id="listbox--listbox-input--1"
                          role="listbox"
                          tabindex="-1"
                        >
                          <span
                            class="version-context-dropdown__option version-context-dropdown__title"
                            data-reach-listbox-group-label=""
                            disabled=""
                            role="presentation"
                            value="title"
                          >
                            <div />
                            <span
                              class="version-context-dropdown__option-name"
                            >
                              Name
                            </span>
                            <span
                              class="version-context-dropdown__option-description"
                            >
                              Description
                            </span>
                          </span>
                          <li
                            aria-selected="true"
                            class="version-context-dropdown__option"
                            data-current=""
                            data-label="3.0"
                            data-reach-listbox-option=""
                            data-value="3.0"
                            id="option-3.0--listbox-input--1"
                            role="option"
                          >
                            <div />
                            <span
                              class="version-context-dropdown__option-name"
                            >
                              3.0
                            </span>
                            <span
                              class="version-context-dropdown__option-description"
                            >
                              3.0
                            </span>
                          </li>
                          <li
                            class="version-context-dropdown__option"
                            data-label="3.15"
                            data-reach-listbox-option=""
                            data-value="3.15"
                            id="option-3.15--listbox-input--1"
                            role="option"
                          >
                            <div />
                            <span
                              class="version-context-dropdown__option-name"
                            >
                              3.15
                            </span>
                            <span
                              class="version-context-dropdown__option-description"
                            >
                              3.15
                            </span>
                          </li>
                        </ul>
                      </div>
                    </reach-portal>
                  }
                >
                  <PopoverImpl
                    className="version-context-dropdown__popover dropdown-menu"
                    data-reach-listbox-popover=""
                    hidden={true}
                    onBlur={[Function]}
                    onKeyDown={[Function]}
                    position={[Function]}
                    tabIndex={-1}
                    targetRef={
                      Object {
                        "current": <span
                          aria-haspopup="listbox"
                          aria-labelledby="button--listbox-input--1"
                          class="version-context-dropdown__button btn btn-secondary"
                          data-reach-listbox-button=""
                          id="button--listbox-input--1"
                          role="button"
                          tabindex="0"
                        >
                          <svg
                            class="mdi-icon icon-inline small"
                            fill="currentColor"
                            height="24"
                            viewBox="0 0 24 24"
                            width="24"
                          >
                            <path
                              d="M6,3A1,1 0 0,1 7,4V4.88C8.06,4.44 9.5,4 11,4C14,4 14,6 16,6C19,6 20,4 20,4V12C20,12 19,14 16,14C13,14 13,12 11,12C8,12 7,14 7,14V21H5V4A1,1 0 0,1 6,3Z"
                            />
                          </svg>
                          <span
                            class="version-context-dropdown__button-text ml-2 mr-1 d-sm-none d-md-block"
                          >
                            Select context
                          </span>
                          <svg
                            class="mdi-icon icon-inline"
                            fill="currentColor"
                            height="24"
                            viewBox="0 0 24 24"
                            width="24"
                          >
                            <path
                              d="M7,10L12,15L17,10H7Z"
                            />
                          </svg>
                        </span>,
                      }
                    }
                  >
                    <div
                      className="version-context-dropdown__popover dropdown-menu"
                      data-reach-listbox-popover=""
                      data-reach-popover=""
                      hidden={true}
                      onBlur={[Function]}
                      onKeyDown={[Function]}
                      style={
                        Object {
                          "left": 0,
                          "position": "absolute",
                          "top": "0px",
                          "width": 0,
                        }
                      }
                      tabIndex={-1}
                    >
                      <div
                        className="version-context-dropdown__info card"
                      >
                        <span
                          className="font-weight-bold"
                        >
                          About version contexts
                        </span>
                        <p
                          className="mb-2"
                        >
                          Version contexts (
                          <a
                            href="http://docs.sourcegraph.com/user/search#version-contexts"
                          >
                            documentation
                          </a>
                          ) allow you to search a set of repositories based on a commit hash, tag, or other interesting moment in time of multiple code bases. Your administrator can configure version contexts in the site configuration.
                        </p>
                        <button
                          className="btn btn-outline-primary version-context-dropdown__info-dismiss"
                          onClick={[Function]}
                          type="button"
                        >
                          Do not show this again
                        </button>
                      </div>
                      <ListboxList
                        className="version-context-dropdown__list"
                      >
                        <ul
                          aria-activedescendant="option-3.0--listbox-input--1"
                          className="version-context-dropdown__list"
                          data-reach-listbox-list=""
                          id="listbox--listbox-input--1"
                          role="listbox"
                          tabIndex={-1}
                        >
                          <ListboxGroupLabel
                            className="version-context-dropdown__option version-context-dropdown__title"
                            disabled={true}
                            value="title"
                          >
                            <span
                              className="version-context-dropdown__option version-context-dropdown__title"
                              data-reach-listbox-group-label=""
                              disabled={true}
                              role="presentation"
                              value="title"
                            >
                              <VersionContextInfoRow
                                description="Description"
                                isActive={false}
                                name="Name"
                                onDisableValue={[Function]}
                              >
                                <div />
                                <span
                                  className="version-context-dropdown__option-name"
                                >
                                  Name
                                </span>
                                <span
                                  className="version-context-dropdown__option-description"
                                >
                                  Description
                                </span>
                              </VersionContextInfoRow>
                            </span>
                          </ListboxGroupLabel>
                          <ListboxOption
                            className="version-context-dropdown__option"
                            key="3.0"
                            label="3.0"
                            value="3.0"
                          >
                            <li
                              aria-selected={true}
                              className="version-context-dropdown__option"
                              data-current=""
                              data-label="3.0"
                              data-reach-listbox-option=""
                              data-value="3.0"
                              id="option-3.0--listbox-input--1"
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onMouseMove={[Function]}
                              onMouseUp={[Function]}
                              onTouchStart={[Function]}
                              role="option"
                            >
                              <VersionContextInfoRow
                                description="3.0"
                                isActive={false}
                                name="3.0"
                                onDisableValue={[Function]}
                              >
                                <div />
                                <span
                                  className="version-context-dropdown__option-name"
                                >
                                  3.0
                                </span>
                                <span
                                  className="version-context-dropdown__option-description"
                                >
                                  3.0
                                </span>
                              </VersionContextInfoRow>
                            </li>
                          </ListboxOption>
                          <ListboxOption
                            className="version-context-dropdown__option"
                            key="3.15"
                            label="3.15"
                            value="3.15"
                          >
                            <li
                              className="version-context-dropdown__option"
                              data-label="3.15"
                              data-reach-listbox-option=""
                              data-value="3.15"
                              id="option-3.15--listbox-input--1"
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onMouseMove={[Function]}
                              onMouseUp={[Function]}
                              onTouchStart={[Function]}
                              role="option"
                            >
                              <VersionContextInfoRow
                                description="3.15"
                                isActive={false}
                                name="3.15"
                                onDisableValue={[Function]}
                              >
                                <div />
                                <span
                                  className="version-context-dropdown__option-name"
                                >
                                  3.15
                                </span>
                                <span
                                  className="version-context-dropdown__option-description"
                                >
                                  3.15
                                </span>
                              </VersionContextInfoRow>
                            </li>
                          </ListboxOption>
                        </ul>
                      </ListboxList>
                    </div>
                  </PopoverImpl>
                </Portal>
              </Portal>
            </Popover>
          </ListboxPopover>
        </div>
      </DescendantProvider>
    </ListboxInput>
  </div>
</VersionContextDropdown>
`;
